Fixed problem with overflowing comments.

--- a/src/client/assets/app.css
+++ b/src/client/assets/app.css
@@ -75,7 +75,6 @@ h6 {
 #imgContainer .imgWrapper .imageComment {
     padding: 2px 5px;
     font-size: 15px;
-    height: 25px;
     border: 1px solid #ccc;
 }
 
